PRODCI-17 Refactor test suite into separate modules. Split distribution zip determination into a Rule