@@ -2,10 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.jboss</groupId>
-  <artifactId>pvt</artifactId>
+
+  <parent>
+    <groupId>com.redhat.rcm</groupId>
+    <artifactId>redhat-releng-tools</artifactId>
+    <version>3</version>
+  </parent>
+
+  <groupId>org.jboss.pvt</groupId>
+  <artifactId>parent</artifactId>
   <version>2.0.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+
+  <packaging>pom</packaging>
 
   <name>PVT - Productisation Validation Testing project</name>
 
@@ -15,16 +23,23 @@
     <tag>pvt-2.0.0</tag>
   </scm>
 
-  <properties>
-      <version.junit>4.12</version.junit>
-  </properties>
+  <modules>
+    <module>harness</module>
+    <module>generic</module>
+  </modules>
 
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>org.jboss.pvt</groupId>
+        <artifactId>harness</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>${version.junit}</version>
+        <version>4.12</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
@@ -36,65 +51,65 @@
         <artifactId>commons-io</artifactId>
         <version>2.5</version>
       </dependency>
+      <dependency>
+        <groupId>commons-lang</groupId>
+        <artifactId>commons-lang</artifactId>
+        <version>2.5</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.13</version>
+      </dependency>
+
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-core</artifactId>
+        <version>1.0.12</version>
+      </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>1.0.12</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-compress</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>net.lingala.zip4j</groupId>
-      <artifactId>zip4j</artifactId>
-      <version>1.3.2</version>
-    </dependency>
-  </dependencies>
   <build>
-    <finalName>${project.artifactId}</finalName>
-    <resources>
-      <resource>
-        <directory>src/main/resources</directory>
-        <filtering>true</filtering>
-      </resource>
-      <resource>
-        <filtering>false</filtering>
-        <directory>src/main/java</directory>
-        <includes>
-          <include>**</include>
-        </includes>
-        <excludes>
-          <exclude>**/*.java</exclude>
-        </excludes>
-      </resource>
-    </resources>
     <pluginManagement>
       <plugins>
         <plugin>
+          <groupId>org.commonjava.maven.plugins</groupId>
+          <artifactId>directory-maven-plugin</artifactId>
+          <version>0.1</version>
+        </plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.19.1</version>
+          <configuration>
+            <systemPropertyVariables>
+              <basedir>${basedir}</basedir>
+              <DISTRIBUTION_ZIP>${DISTRIBUTION_ZIP}</DISTRIBUTION_ZIP>
+            </systemPropertyVariables>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <argLine>-Xmx4096m -XX:MaxPermSize=512m</argLine>
-        </configuration>
+        <artifactId>maven-javadoc-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
       </plugin>
     </plugins>
+
   </build>
+
   <reporting>
     <plugins>
       <plugin>
@@ -107,7 +122,17 @@
       </plugin>
     </plugins>
   </reporting>
-  <profiles>
-  </profiles>
 
+
+  <profiles>
+    <!-- This profile should be active when running to test a particular distribution -->
+    <profile>
+      <id>ci</id>
+      <activation>
+        <property>
+          <name>DISTRIBUTION_ZIP</name>
+        </property>
+      </activation>
+    </profile>
+  </profiles>
 </project>
